--- a/public/less/_repository.less
+++ b/public/less/_repository.less
@@ -1265,6 +1265,12 @@
             margin: 0;
         }
 
+        td.message {
+            display: flex;
+            padding-top: 0;
+            padding-bottom: 0;
+        }
+
         &.ui.basic.striped.table tbody tr:nth-child(2n) {
             background-color: rgba(0, 0, 0, 0.02) !important;
         }
